--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "sf-module-template",
+  "name": "@soluzioni-futura/sse-manager",
   "version": "1.0.0",
-  "description": "npm module template by Soluzioni Futura",
-  "module": "dist/index.esm.js",
+  "description": "sse-manager",
+  "module": "dist/index.module.js",
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
   "type": "module",
@@ -17,11 +17,10 @@
     "LICENSE"
   ],
   "scripts": {
-    "build": "microbundle",
-    "dev": "microbundle watch",
+    "build": "rm -r ./dist && microbundle --target node --format modern,esm,cjs",
     "prepare": "npm run build",
     "pretest": "npm run build",
-    "test": "mocha"
+    "dev": "concurrently \"docker-compose -f ./test/docker-compose.yml up\" \"microbundle watch\""
   },
   "repository": {
     "type": "git",
@@ -34,11 +33,18 @@
   },
   "homepage": "https://github.com/soluzionifutura/sf-module-template#readme",
   "devDependencies": {
-    "microbundle": "^0.15.0",
+    "@soluzioni-futura/eslint-config-soluzioni-futura": "^2.2.0",
     "@types/chai": "^4.3.1",
     "@types/mocha": "^9.1.1",
+    "@types/node": "^18.11.5",
     "chai": "^4.3.6",
+    "concurrently": "^7.5.0",
+    "microbundle": "^0.15.0",
     "mocha": "^10.0.0",
+    "redis": "^4.3.1",
     "ts-node": "^10.8.1"
+  },
+  "dependencies": {
+    "@types/express": "^4.17.14"
   }
 }
