--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@soluzioni-futura/sse-manager",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "sse-manager",
   "module": "dist/index.module.js",
   "main": "dist/index.cjs",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "type": "module",
   "source": "src/index.ts",
   "exports": {
