--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
   "name": "@soluzioni-futura/sse-manager",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "sse-manager",
-  "module": "dist/index.module.js",
-  "main": "dist/index.cjs",
-  "types": "dist/types/index.d.ts",
-  "type": "module",
-  "source": "src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "typings": "./dist/index.d.ts",
   "exports": {
-    "require": "./dist/index.cjs",
-    "default": "./dist/index.modern.js"
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "tsup": {
+    "entry": [
+      "src/index.ts"
+    ],
+    "splitting": false,
+    "sourcemap": true,
+    "format": [
+      "cjs",
+      "esm"
+    ],
+    "clean": true,
+    "dts": true,
+    "treeshake": true
   },
   "files": [
     "dist",
+    "package.json",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
-    "build": "rm -rf ./dist && microbundle --target node --format modern,esm,cjs",
+    "build": "rm -rf dist && tsup",
     "prepare": "npm run build",
     "pretest": "npm run build",
-    "dev": "concurrently \"docker-compose -f ./test/docker-compose.yml up\" \"microbundle watch --target node --format modern,esm,cjs\""
+    "dev": "concurrently \"docker-compose -f ./test/docker-compose.yml up\" \"tsup src/index.ts --watch\""
   },
   "repository": {
     "type": "git",
@@ -35,16 +52,14 @@
   "devDependencies": {
     "@soluzioni-futura/eslint-config-soluzioni-futura": "^2.2.0",
     "@types/chai": "^4.3.1",
+    "@types/express": "^4.17.18",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.11.5",
     "chai": "^4.3.6",
     "concurrently": "^7.5.0",
-    "microbundle": "^0.15.0",
     "mocha": "^10.0.0",
     "redis": "^4.3.1",
-    "ts-node": "^10.8.1"
-  },
-  "dependencies": {
-    "@types/express": "^4.17.14"
+    "ts-node": "^10.8.1",
+    "tsup": "^7.2.0"
   }
 }
