fix in closing connections

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@soluzioni-futura/sse-manager",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "sse-manager",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -37,7 +37,8 @@
     "build": "rm -rf dist && tsup",
     "prepare": "npm run build",
     "pretest": "npm run build",
-    "dev": "concurrently \"docker-compose -f ./test/docker-compose.yml up\" \"tsup src/index.ts --watch\""
+    "dev": "concurrently \"docker-compose -f ./test/docker-compose.yml up\" \"tsup src/index.ts --watch\"",
+    "postinstall": "npm i --prefix ./test"
   },
   "repository": {
     "type": "git",
